update mapping for get post followed
use commented code instead of old mapping structure